# Penalized-Constrained-Regression

./: .gitignore  LICENSE  PCReg_Template.xlsx  README.md  analyze_sar_correlations.py  example_sar_usage.py  fast_corr_check.py  pyproject.toml  quick_sar_correlation_analysis.py  setup_venv.bat  test_sar_generation.py
benchmark_output/: benchmark_report.md  ols_comparison.md  profile_output.txt
paper/: README.md  _quarto.yml  paper.qmd  references.bib
paper/_output/: index.html  paper.docx
paper/_output/appendices/: A-research-summaries-preview.html  A-research-summaries.embed.ipynb  A-research-summaries.out.ipynb  B-algorithm-details-preview.html  B-algorithm-details.embed.ipynb  B-algorithm-details.out.ipynb  B-algorithm-details.qmd  C-degrees-of-freedom-preview.html  (+6 more)
paper/appendices/: A-research-summaries.qmd  D-key-quotes.qmd
paper/research/: Research Summary.docx
paper/sections/: 01-introduction.qmd  03-simulation-design.qmd  04-results.qmd  06-discussion.qmd
penalized_constrained/: __init__.py  core.py  cv.py  diagnostics.py  utils.py
penalized_constrained.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
penalized_constrained/diagnostics/: __init__.py  alpha_trace.py  confidence.py  core.py  dataclasses.py  equations.py  export.py  plotting.py  reporting.py
penalized_constrained/regression/: __init__.py  bounds.py  estimator.py  loss.py  penalties.py
scripts/: 01_simple_illustration.ipynb  01_simple_illustration.py  02_paper_snippets.py  04_motivating_example.py  05_simulation_study.py  05_simulation_study_v2.py  doe_analysis.py  test_unit_space_sim.py
scripts/ICEAA/: 01_simple_illustration.ipynb  04_motivating_example.ipynb  04_motivating_example.py  06_simulation_analysis.py  ICEAA2026_Paper_DRAFT.md  README.md  check_current_example.py  debug_example.py  doe_analysis.py  find_good_seed.py  master_pipeline.py  pcreg_diagnostic_report.html  pcreg_gcv_diagnostic_report.html  penalized_constrained_regression.aux  penalized_constrained_regression.docx  penalized_constrained_regression.qmd  penalized_constrained_regression.tex  references.bib  run_simulation.py  simulation_analysis.py  simulation_data.py  sumulation_analysis.py  ~$nalized_constrained_regression.docx
scripts/benchmarks/: benchmark_performance.py
scripts/demo/: create_sample_data.py  demo_unit_space.py  simple_usage.ipynb  simple_usage.py  simple_usage_diagnostics.html  simple_usage_ols_diagnostics.html  test_report.html  test_with_alpha_trace.html
tests/: __init__.py  test_core.py  test_diagnostics.py
(+69 files in other folders)
