[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penalized-constrained"
version = "0.1.0"
description = "Penalized regression with coefficient constraints for cost estimation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kevin Joy", email = "kjoy@herrenassociates.com"},
    {name = "Max Watstein"}
]
maintainers = [
    {name = "Kevin Joy", email = "kjoy@herrenassociates.com"}
]
keywords = [
    "regression",
    "constrained optimization", 
    "regularization",
    "lasso",
    "ridge",
    "elastic net",
    "cost estimation",
    "learning curve",
    "multicollinearity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.5",
]
viz = [
    "matplotlib>=3.4",
    "seaborn>=0.12",
]
all = [
    "penalized-constrained[dev,docs,viz]",
]

[project.urls]
"Homepage" = "https://github.com/herrenassociates/penalized-constrained"
"Documentation" = "https://penalized-constrained.readthedocs.io"
"Bug Tracker" = "https://github.com/herrenassociates/penalized-constrained/issues"
"Source" = "https://github.com/herrenassociates/penalized-constrained"

[tool.setuptools]
packages = ["penalized_constrained"]

[tool.setuptools.package-data]
penalized_constrained = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
